infra/k8s/expiration-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration-redis
  template:
    metadata:
      labels:
        app: expiration-redis
    spec:
      containers:
        - name: expiration-redis
          image: redis

          #this creates container which runs redis image
          #to use this container inside the expiration service we need cluster ip service to connect to this container  : expiration-redis-clusterIP.yaml is the file
