infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec: 
  replicas: 1
  selector:
    matchLabels:  # how deployments will fiind the pods
      app: auth
  template:
    metadata: 
      labels:
        app: auth   #this lable applied to pod, pod name will be this 
    spec:
      containers: 
        - name: auth
          image: kunaljk/auth       







---

apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector: 
    app: auth   #which pod governs access to, find pod with label of auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
