infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec: 
  replicas: 1
  selector:
    matchLabels:  # how deployments will fiind the pods
      app: client
  template:
    metadata: 
      labels:
        app: client   #this lable applied to pod, pod name will be this 
    spec:
      containers: 
        - name: client
          image: kunaljk/client       
          







---

apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector: 
    app: client   #which pod governs access to, find pod with label of client checks 'client' name inside depl file and where template.metadata.labels.app==='client'
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
