infra/k8s/expiration-redis-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-svc
spec:
  selector:
    app: expiration-redis
  ports:
    - name: expiration-redis
      protocol: TCP
      port: 6379
      targetPort: 6379
