infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec: 
  replicas: 1
  selector:
    matchLabels:  # how deployments will fiind the pods
      app: orders
  template:
    metadata: 
      labels:
        app: orders   #this lable applied to pod, pod name will be this 
    spec:
      containers: 
        - name: orders
          image: kunaljk/orders       
---

apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  selector: 
    app: orders   #which pod governs access to, find pod with label of orders
  ports:
    - name: orders
      protocol: TCP
      port: 3000
      targetPort: 3000
