infra/k8s/orders-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: orders-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-mongo
  template:
    metadata:
      labels:
        app: orders-mongo    
    spec:
      containers: 
        - name: orders-mongo  #this will be container name that contains image with name mongo
          image: mongo   #officially hosted image on docker hub, we are directly importing this image from the docker file


---

apiVersion: v1
kind: Service
metadata:
  name: orders-mongo-srv  #this is service name
spec:
  selector:
    app: orders-mongo   #which pod to give access to (find a pod with label of app:orders-mongo)
  ports:
    - name: db #just normal name, not much usefull
      protocol: TCP 
      port: 27017   #by default mongo db access traffic on 27017, mentioned on the documents
      targetPort: 27017
