infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec: 
  replicas: 1
  selector:
    matchLabels:  # how deployments will fiind the pods
      app: tickets
  template:
    metadata: 
      labels:
        app: tickets   #this lable applied to pod, pod name will be this 
    spec:
      containers: 
        - name: tickets
          image: kunaljk/tickets       
---

apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  selector: 
    app: tickets   #which pod governs access to, find pod with label of tickets
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
