infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations: 
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true' ## tells ingress that lter we will use regex in the code
spec:
  ingressClassName: nginx
  rules:
    - host: ticketing.dev  #only accessible on localhost
      http: 
        paths: 
          - path: /api/users/?(.*) #when any request come like /api/users/anything then send this request to listed backend service
            pathType: ImplementationSpecific
            backend:
              service: 
                name: auth-srv #same name used in the auth-srv.yaml file(name of auth service)
                port: 
                  number: 3000
          - path: /api/tickets/?(.*) #when any request come like /api/tickets/anything then send this request to listed backend service
            pathType: ImplementationSpecific
            backend:
              service: 
                name: tickets-srv #same name used in the auth-srv.yaml file(name of tickets service)
                port: 
                  number: 3000
          - path: /?(.*) 
            pathType: ImplementationSpecific
            backend:
              service: 
                name: client-srv #same name used in the client-srv.yaml file(name of client service)
                port: 
                  number: 3000
